projeto/etapa2/tests/invalid/02_bad_assign.lc
/* Usa = em vez de := (erro sintático em LC-) */
fun void main() {
    let x = 10 ;
}
